Move script-only dependencies into their own deps file under the scripts/src directory. Comment at the top of deps.ts and dev_deps.ts to guide what version of deno std we should use.
run tests against most recent stable deno as well as minimum deno version used internally

Move import map helper scripts (for use with sample app integration testing) under scripts/src, add comments to scripts/deps.ts to explain stdlib versioning strategy.

Run both CI workflows against most recent stable deno as well as version of deno used by Run on Slack.

Name deno CI workflow more specifically

Set min deno version to 1.31.1 (version Run on Slack uses), set deno stdlib version to 0.178.0 (recommended for deno v1.31.1), update tests as a result of assertion method changes in 0.178.0.

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,4 +1,4 @@
-name: Deno
+name: Deno Format, Lint and Unit Tests
 
 on:
   push:
@@ -9,15 +9,20 @@ on:
 jobs:
   deno:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # we test on both most recent stable version of deno (v1.x) as well as
+        # the version of deno used by Run on Slack (v1.31.1)
+        deno-version: [v1.x, v1.31.1]
 
     steps:
       - name: Setup repo
         uses: actions/checkout@v3
 
-      - name: Setup Deno
+      - name: Setup Deno ${{ matrix.deno-version }}
         uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.x
+          deno-version: ${{ matrix.deno-version }}
 
       - name: Run formatter, linter and tests
         run: deno task test
